# dataset-monitor

./: .dockerignore  Cargo.toml  Dockerfile  config-temp.yaml  report.md
src/: api.rs  config.rs  fetcher.rs  lib.rs  main.rs  models.rs  monitor.rs  test.rs
src/db/: duckdb.rs  mod.rs  mongodb.rs
